Fixup to spacing styles

--- a/pages/Index.module.scss
+++ b/pages/Index.module.scss
@@ -91,5 +91,9 @@
         column-count: 1;
       }
     }
+
+    .popularLayouts {
+      margin-top: $spacing-base;
+    }
   }
 }
